fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 17px;
   line-height: 1.8 !important;
+  width: 100%;
+  overflow: hidden;
 }
 
 html {
